Badge & scrollbar issue fixed

--- a/components/badge/badge.css
+++ b/components/badge/badge.css
@@ -39,7 +39,7 @@
 }
 
 .icon-badge {
-  font-size: 1.8rem;
+  font-size: 1.7em;
   height: 1.4em;
   width: 1.4em;
   border-radius: 50%;
@@ -52,12 +52,12 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   color: #ffffff;
   font-weight: 600;
   height: 1rem;
   min-width: 1rem;
-  font-size: 0.62rem;
+  font-size: 0.4em;
   position: absolute;
   top: 2px;
   left: 1.22rem;
