--- a/styles/documentation.scss
+++ b/styles/documentation.scss
@@ -13,7 +13,7 @@
         display: flex;
         flex-direction: column;
         height: calc(100vh - 82px - 2rem);
-        overflow-y: scroll;
+        overflow-y: auto;
         border-right: 2px solid #e7e7e7;
         h6 {
             margin-bottom: 1.2rem;
@@ -85,6 +85,11 @@
     code.hljs {
         border-radius: rem(10);
         padding: 1rem 2rem;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+    .hljs::-webkit-scrollbar {
+        display: none;
     }
     span > code {
         margin: 1rem 1.5rem;
